--- a/demos/checkbox.html
+++ b/demos/checkbox.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>InspireTree</title>
-        <link rel="stylesheet" href="../build/inspire-tree-light.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="../dist/inspire-tree-light.css" />
         <link rel="stylesheet" href="demo.css" />
     </head>
     <body>
